# ContextChallenge

./: .env.example  .gitignore  CLAUDE.md  README.md  astro.config.mjs  config.yaml.example  index.html  package-lock.json  package.json  pyproject.toml
data/: participants.example.csv
src/pages/: index.astro
src/pkn_punkte/: cli.py  config.py  loader.py  portal.py  runlog.py
